--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@vercel/analytics": "^1.5.0",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
